Fix(core): Increase outline offset so it's always visible

--- a/core/src/outline/outline.module.scss
+++ b/core/src/outline/outline.module.scss
@@ -2,7 +2,9 @@
 .always {
 	transition: outline 0.2s ease-out;
 	outline: solid 8px transparent;
-	outline-offset: -1px;
+	// outline-offset should be the same size with outline-width so overflow
+	// won't cut it
+	outline-offset: -2px;
 }
 
 .normal::-moz-focus-inner,
